# wf-optimization

./: .gitignore  CLI_GUIDE.md  CNAME  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile.web  PRODUCT_DOCUMENTATION.md  README.md  VISUALIZATION_GUIDE.md  deploy.sh  index.html  main.py  pyproject.toml  run_and_serve.sh  serve.py  serve_only.sh  style.css
.github/workflows/: deploy.yml
configs/: default_config.yaml
data/: web_results.json
examples/: benchmark_runner_demo.py  healthcare_workflow_demo.py  report_demo.py  visualization_demo.py
scripts/: code_review_analyzer.py  code_review_checks.sh  prepare_web_data.sh
src/: __init__.py  cli.py
src/algorithms/: __init__.py  astar.py  base.py  bellman_ford.py  dag_dp.py  dijkstra.py
src/benchmarking/: QUICK_START.md  README.md  __init__.py  benchmark.py  runner.py
src/datasets/: __init__.py  finance.py  generator.py  healthcare.py  legal.py
src/evaluation/: __init__.py  metrics.py  visualizations.py
src/reporting/: __init__.py  report_generator.py
tests/: __init__.py  manual_phase1_test.py  phase1_validation_results.json  test_algorithms.py  test_benchmark_runner.py  test_datasets.py  test_domain_workflows.py  test_phase1_algorithms.py
web/: common.js  script.js  serve.py
web/data/: last_updated.json  web_results.json
