[tool.poetry]
name = "workflow-optimization-benchmark"
version = "0.1.0"
description = "A comprehensive workflow optimization benchmark suite"
authors = ["Shivam Bhandari <shivambhandari@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
pandas = "^2.0"
matplotlib = "^3.7"
fastapi = "^0.104"
pydantic = "^2.5"
pydantic-settings = "^2.1"
click = "^8.1"
tabulate = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.10"
flake8 = "^6.1"
mypy = "^1.6"

[tool.poetry.scripts]
benchmark = "src.cli:benchmark"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
